patchbay-gui/tests/ui/layout_diagnostic_constraint_normalized_removed.rs
use patchbay_gui::LayoutDiagnosticCode;

fn main() {
    let _ = LayoutDiagnosticCode::ConstraintNormalized;
}
